<!--
  ~ Copyright 2021-2025 VastGui
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="activity_get_sentence">获取一句名言</string>
    <string name="add">加一</string>
    <string name="add_one">加一</string>
    <string name="app_name">AVE</string>
    <string name="back">反面</string>

    <!-- 字母索引栏 start -->
    <string name="alphabetsidebar_switch_text_color">切换索引栏字体颜色</string>
    <string name="alphabetsidebar_switch_indicator_text_color">切换索引栏当前字体颜色</string>
    <string name="alphabetsidebar_switch_bubble_text_color">切换索引栏气泡字体颜色</string>
    <string name="alphabetsidebar_change_text_size">修改索引栏字体大小</string>
    <string name="alphabetsidebar_change_bubble_text_size">修改索引栏气泡字体大小</string>
    <!-- 字母索引栏 end -->

    <!-- 徽标控件 start -->
    <string name="badge_base_usage">基础使用</string>
    <string name="badge_change_color">切换徽标颜色</string>
    <string name="badge_change_position">切换徽标位置</string>
    <string name="badge_click">点击徽标</string>
    <string name="badge_long_click">长按徽标</string>
    <string name="badge_try_move">可以尝试移动徽标</string>
    <string name="badge_bubble_usage">气泡使用</string>
    <string name="badge_bubble_radius">当前气泡半径:%.3fdp</string>
    <string name="badge_bubble_change_bubble_radius">修改徽标大小</string>
    <string name="badge_bubble_text_size">当前字体大小:%.3fsp</string>
    <string name="badge_bubble_change_text">切换文本</string>
    <string name="badge_bubble_change_text_color">切换文本颜色</string>
    <string name="badge_bubble_change_text_size">切换文本字体大小</string>
    <string name="badge_bubble_clear_text">清空文本</string>
    <string name="badge_dot">红点徽标</string>
    <string name="badge_dot_hide">隐藏dot</string>
    <string name="badge_dot_show">展示dot</string>
    <string name="badge_num">数字徽标</string>
    <string name="badge_num_add">数字＋1</string>
    <string name="badge_num_reset">重置数字</string>
    <string name="badge_num_set_max">设置最大值，当前为:%d</string>
    <string name="badge_text_usage">文本使用</string>
    <string name="badge_text">文本徽标</string>
    <string name="badge_text_message">新消息</string>
    <string name="badge_text_receive">新邮件</string>
    <string name="badge_icon_padding_usage">图标内边距设置</string>
    <string name="badge_icon_padding">图标内边距:%.3fdp</string>
    <!-- 徽标控件 end -->

    <!-- 面包屑 start -->
    <string name="bread_crumb_add">增加导航项</string>
    <string name="bread_crumb_remove">移除导航项</string>
    <string name="bread_crumb_switch_text_color">切换字体颜色</string>
    <string name="bread_crumb_change_text_size">切换字体大小</string>
    <string name="bread_crumb_switch_internal_icon">切换分隔符</string>
    <string name="bread_crumb_change_internal_icon_size">改变分隔符大小</string>
    <string name="bread_crumb_change_item_width">改变截断长度</string>
    <!-- 面包屑 end -->

    <!-- 裁剪控件 start -->
    <string name="crop_by_view">调用自定义裁剪</string>
    <string name="crop_by_contract">调用系统裁剪(CropPhotoContract)</string>
    <string name="crop_by_intent">调用系统裁剪(CropIntent)</string>
    <string name="crop_open_camera">打开相机</string>
    <string name="crop_switch_type">切换裁剪框类型</string>
    <string name="crop_switch_type_fmt">裁剪框类型：%s</string>
    <string name="crop_switch_mask_color">切换遮罩颜色</string>
    <string name="crop_switch_stroke_color">切换边框颜色</string>
    <string name="crop_change_width_and_height">切换裁剪框width/height</string>
    <string name="crop_change_size">切换裁剪框size</string>
    <string name="crop_change_size_fmt">%.2fdp</string>
    <string name="crop_change_get_photo">获取裁剪图片</string>
    <!-- 裁剪控件 end -->

    <!-- 权限申请 start -->
    <string name="permission_granted_fmt">%s权限已授予</string>
    <string name="permission_denied_fmt">%s权限已被拒绝</string>
    <string name="permission_no_more_ask_fmt">%s权限已被拒绝并不再询问</string>
    <!-- 权限申请 end -->

    <!-- 进度条 start -->
    <string name="progress_switch_text_color">切换文字颜色</string>
    <string name="progress_change_text_size">改变文字大小</string>
    <string name="progress_switch_text_show">切换文字显示</string>
    <string name="progress_switch_progress_color">切换进度条颜色</string>
    <string name="progress_switch_progress_background_color">切换进度条背景颜色</string>
    <string name="progress_change_progress">修改进度</string>

    <string name="arc_progress_switch_progress_shader">切换进度条Shader</string>
    <string name="arc_progress_switch_startpoint_color">切换 startpoint 颜色</string>
    <string name="arc_progress_switch_endpoint_color">切换 endpoint 颜色</string>
    <string name="arc_progress_change_radius">改变进度条半径</string>
    <string name="arc_progress_change_width">改变进度条宽度</string>
    <string name="arc_progress_change_endpoint_radius">改变 endpoint 半径</string>

    <string name="wave_progress_switch_image">切换图片</string>
    <string name="wave_progress_set_progress">设置进度</string>
    <string name="wave_progress_set_space">设置Space</string>
    <string name="wave_progress_set_stroke">设置Stroke</string>
    <string name="wave_progress_change_wave_speed">改变水波纹速度</string>
    <string name="wave_progress_change_wave_width">改变水波纹宽度</string>
    <string name="wave_progress_change_wave_height">改变水波纹高度</string>
    <string name="wave_progress_switch_stroke_color">切换边框颜色</string>
    <string name="wave_progress_change_update">改变刷新频率</string>

    <string name="horizontal_pv_switch_background">修改背景图片</string>
    <string name="horizontal_pv_switch_progress">修改进度条图片</string>

    <string name="horizontal_tpv_change_text_margin">修改文字margin</string>
    <string name="horizontal_tpv_switch_text_box_color">切换文字 box 颜色</string>
    <string name="horizontal_tpv_change_progress_height">改变进度条高度</string>
    <!-- 进度条 end -->

    <!-- 评分控件 start -->
    <string name="rating_add_star">增加星星</string>
    <string name="rating_remove_star">减少星星</string>
    <string name="rating_switch_orientation">切换星星方向</string>
    <string name="rating_switch_bitmap">切换星星图片</string>
    <string name="rating_switch_method">切换选择方式</string>
    <string name="rating_switch_method_fmt">切换选择方式：%s</string>
    <string name="rating_size_setting">星星尺寸设定</string>
    <string name="rating_size_fmt">星星大小：%.2fdp</string>
    <string name="rating_internal_setting">星星间隔设定</string>
    <string name="rating_internal_fmt">星星间距：%.2fdp</string>
    <string name="rating_setting">星星评分设定</string>
    <!-- 评分控件 end -->

    <!-- Vp2 指示器 start -->
    <string name="vp2_indicator_switch_count_fmt">切换指示器数量，当前为：%d</string>
    <string name="vp2_indicator_switch_style_fmt">切换指示器类型，当前为：%s</string>
    <string name="vp2_indicator_switch_select_color">切换指示器选中颜色（Circle 风格）</string>
    <string name="vp2_indicator_switch_unselect_color">切换指示器未选中颜色（Circle 风格）</string>
    <string name="vp2_indicator_change_bitmap_size">切换指示器Bitmap尺寸（Bitmap 风格）</string>
    <string name="vp2_indicator_change_radius">切换指示器半径（Circle 风格）</string>
    <string name="vp2_indicator_change_distance">切换指示器间距</string>
    <string name="vp2_indicator_change_position">切换指示器选中项</string>
    <!-- Vp2 指示器 end -->

    <!-- 振动器 start -->
    <string name="vibrator_manager">振动管理器</string>
    <string name="vibrator_manager_ids">当前设备的振动器id列表为：%s</string>
    <string name="vibrator_manager_is_available">当前设备的振动器是否可用：%s</string>
    <string name="vibrator_manager_single_vibrate">默认振动器单次震动：%d ms</string>
    <string name="vibrator_manager_cancel_vibrate">取消全部震动</string>
    <string name="vibrator">振动器</string>
    <string name="vibrator_has_hardware">振动器是否有硬件：%s</string>
    <string name="vibrator_has_amplitude_control">振动器是否有支持振幅控制：%s</string>
    <string name="vibrator_id">振动器的id为：%d</string>
    <string name="vibrator_qfactor">振动器的qFactor为：%.4f</string>
    <string name="vibrator_resonantfrequency">振动器的resonantFrequency为：%.4f</string>
    <string name="vibrator_single_vibrate">振动器单次振动：%d ms</string>
    <string name="vibrator_cancel_vibrate">取消振动</string>
    <!-- 振动器 end -->

    <string name="base_adapter">通用RecyclerView BaseAdapter</string>
    <string name="base_bind_adapter">通用RecyclerView BaseBindingAdapter</string>
    <string name="base_fragment_activity">FragmentActivity示例</string>
    <string name="base_intent">常用intent</string>
    <string name="cancel">取消</string>
    <string name="change_dark">切换暗夜模式</string>
    <string name="change_theme">切换主题</string>
    <string name="date">日期</string>
    <string name="default_count">0</string>
    <string name="default_zero">0</string>
    <string name="download">下载</string>
    <string name="file">文件存储</string>
    <string name="fragment_fourth">这是第四个页面</string>
    <string name="fragment_get_sentence">获取一句名言并共享</string>
    <string name="fragment_receive_sentence">接收一句名言</string>
    <string name="fragment_request_image">请求图片</string>
    <string name="fragment_third">这是第三个页面</string>
    <string name="front">正面</string>
    <string name="get_camera">获取相册图片</string>
    <string name="helloworld">你好世界，你好世界，你好世界</string>
    <string name="icon">图标</string>
    <string name="intent_app_detail_setting">应用详情设置</string>
    <string name="intent_call_phone">拨打电话</string>
    <string name="intent_create_alarm">创建闹钟</string>
    <string name="intent_create_shortcut">创建快捷方式</string>
    <string name="intent_get_qrcode">获取二维码</string>
    <string name="intent_open_web_page">打开网页</string>
    <string name="intent_search_web">网络搜索</string>
    <string name="intent_send_email">发送电子邮件</string>
    <string name="intent_send_mms_message">发送短信</string>
    <string name="intent_wireless_setting">无线设置</string>
    <string name="loading_page">加载页面</string>
    <string name="netstatelayout_get_sentence">获取一句名言</string>
    <string name="open_snackbar">打开SnackBar</string>
    <string name="pause">暂停</string>
    <string name="picture">图片</string>
    <string name="please_enter_email">请输入邮箱</string>
    <string name="ratingView">评分控件</string>
    <string name="refresh">刷新</string>
    <string name="reset_theme">重置主题</string>
    <string name="resume">继续</string>
    <string name="revoke">撤消</string>
    <string name="search">搜索</string>
    <string name="shape">Shape工具类</string>
    <string name="show_dialog">展示对话框</string>
    <string name="show_full_screen_dialog">展示全屏对话框</string>
    <string name="snapshot_example">截图示例</string>
    <string name="snapshot_inflate">截图未膨胀视图</string>
    <string name="snapshot_wait">待截图示例</string>
    <string name="swipe_list_view">仿qq滑动列表</string>
    <string name="test_text">测试文本</string>
    <string name="theme">换肤框架示例</string>
</resources>