<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2021-2025 VastGui
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/vibrator_manager"
            android:textAppearance="?attr/textAppearanceTitleLarge" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ids_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/vibrator_manager_ids" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/is_available_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/vibrator_manager_is_available" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vibrator_manager_vibrate_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/vibrator_manager_single_vibrate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vibrator_manager_cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/vibrator_manager_cancel_vibrate" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/vibrator"
            android:textAppearance="?attr/textAppearanceTitleLarge" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/has_vibrator_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/vibrator_has_hardware" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/has_amplitude_control_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/vibrator_has_amplitude_control" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vibrator_id_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/vibrator_id" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vibrator_qFactor_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/vibrator_qfactor" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vibrator_resonantfrequency_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/vibrator_resonantfrequency" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vibrator_vibrate_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/vibrator_manager_single_vibrate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vibrator_cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/vibrator_cancel_vibrate" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>