<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2021-2025 VastGui
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.view.BadgeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/badge_base_usage" />

        <com.ave.vastgui.tools.view.badgeview.BadgeView
            android:id="@+id/dot_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:badge_mode="dot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dot_badge_change_color_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_change_color" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_dot_badge_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_dot_show" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/hide_dot_badge_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_dot_hide" />

        <com.google.android.material.slider.Slider
            android:id="@+id/dot_badge_radius_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:valueFrom="0"
            android:valueTo="20"
            app:thumbHeight="20dp"
            app:trackHeight="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/badge_bubble_usage" />

        <com.ave.vastgui.tools.view.badgeview.BadgeView
            android:id="@+id/number_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:badge_mode="number"
            app:bubble_text_max_num="10" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_try_move"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number_badge_add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_num_add"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number_badge_reset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_num_reset" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number_badge_set_max_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:text="@string/badge_num_set_max" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number_badge_change_color_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_bubble_change_text_color" />

        <com.google.android.material.slider.Slider
            android:id="@+id/number_badge_radius_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:valueFrom="0"
            android:valueTo="20"
            app:thumbHeight="20dp"
            app:trackHeight="10dp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/number_badge_text_size_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:valueFrom="0"
            android:valueTo="20"
            app:thumbHeight="20dp"
            app:trackHeight="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_text_usage" />

        <com.ave.vastgui.tools.view.badgeview.BadgeView
            android:id="@+id/text_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:badge_mode="text"
            app:bubble_radius="15dp"
            app:bubble_text="@string/badge_text_message"
            app:bubble_text_max_num="10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/text_badge_change_text_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_bubble_change_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/text_badge_clear_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_bubble_clear_text" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>