<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2021-2025 VastGui
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.view.BadgeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:orientation="vertical">

        <com.ave.vastgui.tools.view.badgeview.BadgeLayout
            android:id="@+id/num_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:badge_mode="number"
            app:badge_position="left_top"
            app:icon="@drawable/ic_person_32px">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/numlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/badge_num"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </com.ave.vastgui.tools.view.badgeview.BadgeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_badge_add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_num_add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_badge_reset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_num_reset" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_badge_change_position_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_change_position" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_badge_change_color_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_change_color" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_badge_set_max_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:text="@string/badge_num_set_max" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_badge_change_text_color_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_bubble_change_text_color" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_icon_padding_usage"
            android:textStyle="bold" />

        <com.google.android.material.slider.Slider
            android:id="@+id/num_badge_icon_padding_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:valueFrom="0"
            android:valueTo="20"
            app:thumbHeight="20dp"
            app:trackHeight="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_bubble_change_text_size"
            android:textStyle="bold" />

        <com.google.android.material.slider.Slider
            android:id="@+id/num_badge_text_size_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:valueFrom="0"
            android:valueTo="20"
            app:thumbHeight="20dp"
            app:trackHeight="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/badge_bubble_change_bubble_radius"
            android:textStyle="bold" />

        <com.google.android.material.slider.Slider
            android:id="@+id/num_badge_bubble_radius_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:valueFrom="0"
            android:valueTo="20"
            app:thumbHeight="20dp"
            app:trackHeight="10dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>