<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2021-2025 VastGui
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.view.CropActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_with_crop_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crop_by_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_with_crop_photocontract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crop_by_contract" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_with_crop_intent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crop_by_intent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crop_open_camera" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center" />
</LinearLayout>